<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TableNow</string>
    <string name="ok">OK</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="First_Name"></string>
    <string name="Last_Name"></string>
    <string name="address">Address</string>
    <string name="pricing">Pricing</string>
    <string name="image">Image</string>
    <string name="Email"></string>
    <string name="Password"></string>
    <string name="Join">Join Now!</string>
    <string name="log_in">Log In</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="view_firstname">First name: </string>
    <string name="view_lastname">Last name: </string>
    <string name="view_password">Password: </string>
    <string name="view_username">Username: </string>
    <string name="view_email">Email: </string>
    <string name="remember_me">Remember me </string>
    <string name="restaurant">Restaurant</string>
    <string name="res_name">Restaurant Name</string>
    <string name="user">User</string>
    <string name="Editor">Editor</string>
    <string name="Search_button">Search</string>
    <string name="Search_text">Search:</string>
    <string name="title_activity_restaurant">Restaurant</string>
    <string name="title_activity_user">User</string>
    <string name="title_activity_user_search">UserSearch</string>
    <string name="title_activity_user_layout">UserLayout</string>
    <string name="title_activity_sign_up">Sign_up</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_editor">Editor</string>
    <string name="title_activity_user_results">User_results</string>
    <string name="title_activity_restaurant_update">Restaurant_update</string>
    <string name="title_activity_user_update">User_update</string>
    

</resources>
