<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/EmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="191dp"
        android:text="@string/view_email" />

    <Button
        android:id="@+id/User"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/Restaurant"
        android:onClick="to_user"
        android:text="@string/user" />

    <Button
        android:id="@+id/Restaurant"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="to_restaurant"
        android:text="@string/restaurant" />

    <Button
        android:id="@+id/signUpButton"
        android:onClick="to_signUp"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/sign_up" />

    <Button
        android:id="@+id/logInButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/signUpButton"
        android:text="@string/log_in" />

    <CheckBox
        android:id="@+id/checkBox_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EmailTextView"
        android:layout_below="@+id/passwordTextView"
        android:layout_marginTop="35dp"
        android:text="@string/remember_me" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/signUpButton"
        android:layout_below="@+id/EmailTextView"
        android:layout_marginTop="40dp"
        android:text="@string/view_password" />

    <EditText
        android:id="@+id/EmailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/passwordEditText"
        android:layout_centerVertical="true"
        android:ems="10" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/logInButton"
        android:layout_alignTop="@+id/passwordTextView"
        android:ems="10"
        android:inputType="textPassword" />

</RelativeLayout>
